ecmascript/parser/tests/typescript-errors/tsc/classes/members/privateNames/privateNameBadDeclaration/input.ts.stderr
error: Unexpected token `#`. Expected identifier, string literal, numeric literal or [ for the computed key
 --> $DIR/tests/typescript-errors/tsc/classes/members/privateNames/privateNameBadDeclaration/input.ts:3:3
  |
3 |   #x: 1         // Error
  |   ^

